# CONVEX_HULL

./: .editorconfig  CMakeLists.txt  Makefile  README.md  compile_flags.txt  readme.org
.github/workflows/: makefile.yml
include/: geometry_utils.h  line_2d.h
src/: animation_controller.cc  convex_hull.cc  geometry_utils.cc  line_2d.cc  main.cc  point_2d.cc  utils.cc
src/tests/inputs/: all_files_path.txt
test/benchmark/: analyzer.cc  analyzer.h
test/inputs/: ENTRADA30000.txt  ENTRADA90.txt  ENTRADA91_1.txt  all_files_path.txt
test/unit/: geometry_utils_test.cc
tests/inputs/: all_files_path.txt
